<resources>
    <string name="app_name">ReMapV2</string>
    <string name="db_name">db_remap_v2</string>

    <string name="app_full_name">ReMAP - Remote Monitoring Application in Psychiatry</string>
    <string name="app_uses">This app is used in the FOR 2107 study of the University of Münster.</string>

    <string name="title_activity_debug">ReMAP</string>
    <string name="title_activity_survey">ReMAP</string>
    <string name="title_activity_list_data">ReMAP</string>

    <string name="label_welcome">Welcome! 😃</string>
    <string name="label_subject_id">Subject-ID:</string>
    <string name="label_debug">Debug</string>
    <string name="label_ok">OK</string>

    <string name="hint_subject_id">Subject-ID</string>

    <string name="action_skip">SKIP</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>

    <string name="content_on_boarding">
        Please insert your subject ID. Your data will never be stored along with your name or other
        personal data.\nThe ID cannot be changed afterwards.
    </string>
    <string name="content_contact_info">
        If you have any questions or suggestions, please do not hesitate to
        contact us.\nContact: hahnt[at]wwu.de
    </string>
    <string name="content_bdi_survey">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
        been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took
        a galley of type and scrambled it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
    </string>
    <string name="content_new_audio_sample_1">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
        been the industry\'s standard dummy text ever since the 1500s.
    </string>
    <string name="content_new_audio_sample_2">
        It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
    </string>
    <string name="content_new_audio_sample_3">
        It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
    </string>
    <string name="content_sleep_survey_question">
        Wie viele Stunden haben Sie in der letzten Nacht gschlafen?
    </string>
    <string name="content_mood_survey_question">
        Wie ist lhre Stimmung heute?
    </string>

    <string name="description_app_logo">App logo</string>
    <string name="description_ic_done">Done Icon</string>

    <string name="label_done">Done</string>
    <string name="label_steps">Steps</string>
    <string name="label_distance">Distance (running and walking)</string>
    <string name="label_new_audio_sample">New audio sample</string>
    <string name="label_audio_samples">Audio samples</string>
    <string name="label_new_bdi_survey">New BDI survey</string>
    <string name="label_accelerometer_data">Accelerometer data</string>
    <string name="label_new_sleep_entry">New sleep entry</string>
    <string name="label_new_mood_entry">New mood entry</string>
    <string name="label_schedule_notifications">Schedule notifications</string>
    <string name="label_bdi">BDI</string>
    <string name="label_get_started">Get Started</string>
    <string name="label_activity_completed">Activity completed</string>
    <string name="label_activity_not_completed">Activity not completed</string>
    <string name="label_thanks">Thanks a lot!</string>
    <string name="label_hint_to_complete_activity">Answer all questions for completing the activity</string>
    <string name="label_next">Next</string>

    <string name="dummy_data">8.00</string>
    <string name="dummy_date">01.08.18, 08:38</string>
    <string name="dummy_subject_id">A1234</string>
    <string name="title_activity_new_audio_sample">Audio Sample</string>
    <string name="label_voice">Voice</string>
    <string name="description_ic_mobile">Mobile Icon</string>
    <string name="description_ic_voice">Voice Icon</string>
    <string name="label_before_start_audio_sample">Please wait while we check the background noise level</string>
    <string name="label_progress">Starting activity in</string>
    <string name="description_ic_play">Play Icon</string>
    <string name="min_mood_value">0</string>
    <string name="max_mood_value">10</string>
    <string name="max_sleep_value">13</string>
</resources>
