<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/space_16dp"
    android:background="@color/colorWhite"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/description_app_logo" />

    <TextView
        android:id="@+id/txt_app_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_full_name"
        android:textSize="@dimen/text_small_subtitle"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txt_app_uses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/app_uses"
        android:textSize="@dimen/text_small_subtitle"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/label_subject_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_uses"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/label_subject_id"
        android:textSize="@dimen/text_small_subtitle"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txt_subject_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_uses"
        app:layout_constraintStart_toEndOf="@+id/label_subject_id"
        android:layout_marginTop="@dimen/space_20dp"
        android:layout_marginStart="@dimen/space_10dp"
        tools:text="@string/dummy_subject_id"
        android:textSize="@dimen/text_small_subtitle"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txt_contact_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_subject_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/content_contact_info"
        android:textSize="@dimen/text_small_subtitle"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txt_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="@dimen/space_15dp"
        android:paddingStart="@dimen/space_0dp"
        android:paddingEnd="@dimen/space_15dp"
        android:text="@string/label_debug"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/colorPrimary"
        android:onClick="onClickDebug" />
</android.support.constraint.ConstraintLayout>