<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:padding="@dimen/space_16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_survey_end_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_activity_completed"
            android:textSize="@dimen/text_extra_large_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fragment_survey_end_txt_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_thanks"
            android:layout_marginTop="@dimen/space_5dp"
            android:textSize="@dimen/text_subtitle"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/fragment_survey_end_txt_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/fragment_survey_end_ic"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="@dimen/space_5dp"
            app:srcCompat="@drawable/ic_check_circle"
            android:contentDescription="@string/description_ic_done"
            app:layout_constraintTop_toBottomOf="@+id/fragment_survey_end_txt_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>