<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="@dimen/space_16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_survey_start_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_15dp"
            android:text="@string/label_bdi"
            android:textSize="@dimen/text_extra_large_title"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/fragment_survey_start_txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_15dp"
            android:text="@string/content_bdi_survey"
            android:textSize="@dimen/text_subtitle"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/fragment_survey_start_txt_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/fragment_survey_start_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:paddingStart="@dimen/space_30dp"
            android:paddingEnd="@dimen/space_30dp"
            android:text="@string/label_get_started"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/fragment_survey_start_txt_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>